--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "@types/react-test-renderer": "^16.9.1",
     "husky": "^4.0.10",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.7.4",
-    "pretty-quick": "^2.0.1"
+    "typescript": "^3.7.4"
   }
 }
