--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.12.0",
     "react-redux": "^7.1.3"
   },
@@ -43,6 +43,8 @@
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "react": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "ts-jest": "^24.3.0",
