--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES6",
     "module": "commonjs",
     "declaration": true,
+    "jsx": "react",
     "outDir": "dist",
     "strict": true,
     "moduleResolution": "node",
